Bug 350031 - [transform-tool] transform tool and switching layer bug
Summary: [transform-tool] transform tool and switching layer bug
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 4.2.5
Platform: Compiled Sources Microsoft Windows
: NOR critical
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2015-07-08 20:31 UTC by David REVOY
Modified: 2019-08-08 05:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2015-07-08 20:31:24 UTC
Hey, here is a fresh critical bug ( in my opinion a release blocker for 2.9.6 ... :-/  ). It affect the transform tool really badly when working with multiple layer. 

* How to reproduce :
Setup :
1. Open a fresh Krita document
2. On a new layer trace a black square with the square tool
3. On a new layer trace a red circle with the circle tool ( outside the black square )
4. On a new layer trace a blue circle with the circle tool ( outside the black square too ). 
Trigger :
5. Select the transform tool , and try to fit the blue and red circle in the black square with transform tool only, switch layer with the layer docker. 

* Result :
6. As you'll switch layer, the position of element will be reset, sometime will just go offset of the canvas, but nothing will be backed. All keep moving. 

* Workaround :
Extremely extremely annoying :D Duplicate the layer after the transform is done, and remove the layer under ( original ). That should 'bake' the transform. 

* Reproducible : 
Always.

* Note : 
The 'continuous' transform was added in 2.9 / master two days ago or so. Can we get longer beta-test time before a release ? Thank you :)
Comment 1 mvowada 2015-07-09 06:07:01 UTC
The same here as reported by David, with Krita: 2.9.5 (git e40724c)
Comment 2 Dmitry Kazakov 2015-07-09 12:57:55 UTC
Thank you David! I'll fix it as soon as possible.
Comment 3 Dmitry Kazakov 2015-07-09 14:30:23 UTC
Git commit 46da070e61b75295df486ecaf4d95745192a4a1b by Dmitry Kazakov.
Committed on 09/07/2015 at 14:30.
Pushed by dkazakov into branch 'calligra/2.9'.

Fix a bug in Transform Tool with applied a bogus transformation when continued

We should not try to continue a transformation if it has
been applied to a different layer.

M  +6    -4    krita/plugins/tools/tool_transform2/kis_tool_transform.cc
M  +1    -1    krita/plugins/tools/tool_transform2/kis_tool_transform.h
M  +5    -1    krita/plugins/tools/tool_transform2/strokes/transform_stroke_strategy.cpp
M  +2    -1    krita/plugins/tools/tool_transform2/strokes/transform_stroke_strategy.h

http://commits.kde.org/calligra/46da070e61b75295df486ecaf4d95745192a4a1b