Fix a bug in Transform Tool with applied a bogus transformation when continued

We should not try to continue a transformation if it has
been applied to a different layer.

BUG:350031